--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-REACT_APP_NODE_URL=https://test.deso.org
-REACT_APP_API_URL=https://test.deso.org/api/v0
-REACT_APP_PROFILE_URL=https://test.deso.org
+REACT_APP_NODE_URL=https://node.deso.org
+REACT_APP_API_URL=https://node.deso.org/api/v0
+REACT_APP_PROFILE_URL=https://diamondapp.com
 REACT_APP_IDENTITY_URL=https://identity.deso.org
-REACT_APP_IS_TESTNET=true
+REACT_APP_IS_TESTNET=false
