updated number of members indicator so it's not confused with notifications

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "elliptic": "^6.5.4",
     "ethers": "^5.7.2",
     "hdkey": "github:deso-protocol/hdkey",
+    "linkify-it": "^4.0.1",
+    "linkify-plugin-mention": "^4.1.0",
+    "linkifyjs": "^4.1.0",
     "lodash": "^4.17.21",
     "material-color-hash": "^0.1.6",
     "react": "^18.2.0",
